# llm-portfolio-optimizer

./: .gitignore  Evo_code.ipynb  README.md  base_code_gwo_fast_colab.ipynb  default_feature_selection_2026.ipynb  investment_calculator.ipynb  llm_config.py  wilcoxon_comparison.ipynb
data/: assets_df.parquet  prices.prices  raw_absolute_prices.parquet  raw_dataset.parquet
experiments_walk_forward_llm/: all_models_walk_forward_epoch_scores.csv  all_models_walk_forward_equity_curve.csv  all_models_walk_forward_results.csv  all_models_walk_forward_summary.csv  asset_consensus_summary.csv  compare_asset_frequency.csv  compare_train_score_by_epoch.csv  model_asset_analysis.md  model_asset_history_frequency.csv  model_final_asset_weights.csv
experiments_walk_forward_llm/deepseek_deepseek-v4-pro/: walk_forward_epoch_scores.csv  walk_forward_equity_curve.csv  walk_forward_results.csv  walk_forward_summary.json
experiments_walk_forward_llm/google_gemini-3.1-pro-preview/: walk_forward_epoch_scores.csv  walk_forward_equity_curve.csv  walk_forward_results.csv  walk_forward_summary.json
experiments_walk_forward_llm/mistralai_mistral-small-2603/: walk_forward_epoch_scores.csv  walk_forward_equity_curve.csv  walk_forward_results.csv  walk_forward_summary.json
experiments_walk_forward_llm/openai_gpt-oss-120b/: walk_forward_epoch_scores.csv  walk_forward_equity_curve.csv  walk_forward_results.csv  walk_forward_summary.json
trading_optimizer/: pyproject.toml  requirements.txt
trading_optimizer/src/trading_optimizer/: __init__.py  portfolio_return_optimizer.py
(+26 files in other folders)
