[project]
name = "trading-optimizer"
version = "0.1.0"
description = "LLM-as-Optimizer portfolio asset and weight selection under a risk limit"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2",
  "matplotlib>=3.7",
  "langchain-core>=0.3",
  "langchain-gigachat>=0.3",
  "langchain-openai>=0.2",
  "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
